--- a/README.asciidoc
+++ b/README.asciidoc
@@ -150,10 +150,7 @@ In embedded mode the application expects that there already is a QApplication co
 and a Vizkit3DWidget already exists. The existing widget will be used for visualization.
 
 ==== CONFIGURE_DEBUG_DRAWINGS_USE_PORT
-In port mode the application expects to be running inside a rock task. The context of that task has to be provided. For each drawing a new port will be added to the task and the corresponding drawing commands will be sent through that port. The drawings can be
-visualized using rock-display.
-
-
+In port mode the application expects to be running inside a rock task. The context of that task has to be provided. For each drawing a new port will be added to the task and the corresponding drawing commands will be sent through that port. The drawings can be visualized using rock-display.
 
 
 === Simple Drawing
@@ -237,7 +234,7 @@ while(true)
 === FLUSHING
 When sending drawing commands through rock ports the user needs to flush the
 send queue regularly. This should be done in the update loop of the corresponding
-task.
+task. If you do not flush manually the library will flush for you every 1.5 seconds.
 
 ```c++
 void SomeTask::updateHook()
@@ -247,6 +244,48 @@ void SomeTask::updateHook()
     FLUSH_DRAWINGS();
     }
 ```
+
+== Examples
+
+=== A minimal standalone Example
+A minimal standlone example can be found in `test/draw_test.cpp`.
+Take a look at `test/CMakeLists.txt` to learn about the neccessary flags to build the example.
+
+=== A minimal ROCK Task
+For a ROCK task several things need to be done:
+
+
+Add dependencies::
+A minimal `manifest.xml` should look like this:
+```
+<package>
+  <depend package="base/cmake" />
+  <depend package="gui/orogen/vizkit3d_debug_drawings" />
+  <depend package="gui/vizkit3d_debug_drawings" />  
+</package>
+```
+Add build flags::
+Modify the `src/CMakeLists.txt` and add the following:
+```
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(V3DD REQUIRED vizkit3d_debug_drawings)
+```
+Add `${V3DD_LIBRARIES}` to `TARGET_LINK_LIBRARIES`:
+```
+TARGET_LINK_LIBRARIES(${DEBUG_DRAWING_TEST_TASKLIB_NAME}
+    #other libs here
+    ${V3DD_LIBRARIES})
+```
+Add include directories and linker flags:
+```
+target_include_directories(${DEBUG_DRAWING_TEST_TASKLIB_NAME} PUBLIC ${V3DD_INCLUDE_DIRS})    
+target_compile_options(${DEBUG_DRAWING_TEST_TASKLIB_NAME} PUBLIC ${V3DD_CFLAGS_OTHER}) 
+```
+
+
+
+
+
 
 
 == Under the Hood
