--- a/README.asciidoc
+++ b/README.asciidoc
@@ -36,55 +36,20 @@ Nothing special has to be done to compile inside ROCK. Just call *amake* and wai
 
 === Compiling standalone
 
-Several dependencies need to be compiled and installed using a common install prefix.
-
-==== Prepare environment
-Create env.sh with following content and source it:
+Install all system dependencies::
 ```
-export CMAKE_PREFIX_PATH=<PATH_TO_INSTALL_PREFIX>
-export PKG_CONFIG_PATH=<PATH_TO_INSTALL_PREFIX>/lib/pkgconfig:<PATH_TO_INSTALL_PREFIX>/share/pkgconfig:<PATH_TO_INSTALL_PREFIX>/lib64/pkgconfig:$PKG_CONFIG_PATH
-export LD_LIBRARY_PATH=<PATH_TO_INSTALL_PREFIX>/lib:<PATH_TO_INSTALL_PREFIX>/lib64:$PKG_CONFIG_PATH
-export PATH=<PATH_TO_INSTALL_PREFIX>/bin:$PATH
-export VIZKIT_PLUGIN_RUBY_PATH=<PATH_TO_INSTALL_PREFIX>/lib
+sudo apt install TODO
 ```
 
-Most of the environment variables are only needed while compiling. Only *VIZKIT_PLUGIN_RUBY_PATH* needs to be exported for execution. This variable is used by vizkit3d to locate the visualization plugins.
-
-==== install base-cmake
-base-cmake contains special cmake macros that are used in osgviz, vizkit3d and V3DD. 
-
+Install local depndencies::
 ```
-git clone git@github.com:rock-core/base-cmake.git
-cd base-cmake
-mkdir build
-cd build
-cmake -DCMAKE_INSTALL_PREFIX=<PATH_TO_INSTALL_PREFIX> ..
-make -j install
+./install_dependencies.sh <path_to_prefix>
 ```
 
+Build V3DD::
+Port support doesn't make much sense when building outside rock. It can bebe disabled with *WITH_PORTS=OFF*.
+If ports are disabled you may skip the rtt dependency (remove it from the `install_dependencies.sh` script).
 
-==== install osgviz
-```
-git@github.com:/rock-core/gui-osgviz.git
-cd gui-osgviz-osgviz
-mkdir build
-cd build
-cmake -DCMAKE_INSTALL_PREFIX=<PATH_TO_INSTALL_PREFIX> ..
-make -j install
-```
-==== install vizkit3d
-```
-git clone git@github.com:envire/gui-vizkit3d.git
-cd gui-vizkit3d
-git checkout osgviz
-mkdir build
-cd build
-cmake -DCMAKE_INSTALL_PREFIX=<PATH_TO_INSTALL_PREFIX> ..
-make -j install
-```
-
-==== Build V3DD
-Port support needs to be disabled with *WITH_PORTS=OFF* because ports are not availabled without ROCK.
 Set *DROCK_TEST_ENABLED=ON* to build the tests.
 
 ```
