--- a/README.asciidoc
+++ b/README.asciidoc
@@ -11,7 +11,7 @@ A ROCK (http://rock-robotics.org) library that provides methods to create 3d dra
 
 == Build and Test Status
 [link=https://circleci.com/gh/rock-gui/gui-vizkit3d_debug_drawings]
-image::https://circleci.com/gh/rock-gui/gui-vizkit3d_debug_drawings.svg?style=svg?style=svg[Build Status]
+image::https://circleci.com/gh/rock-gui/gui-vizkit3d_debug_drawings.png[Build Status]
 
 
 == Features
