--- a/README.asciidoc
+++ b/README.asciidoc
@@ -10,10 +10,10 @@ A ROCK (http://rock-robotics.org) library that provides methods to create 3d dra
 
 
 == Build and Test Status
-Build status: [link=https://circleci.com/gh/rock-gui/gui-vizkit3d_debug_drawings]
+
+[link=https://circleci.com/gh/rock-gui/gui-vizkit3d_debug_drawings]
 image::https://circleci.com/gh/rock-gui/gui-vizkit3d_debug_drawings.png[Build Status]
 
-Test status: Unit tests are currently not run in CI. They are not trivial to run because they open a window and you really need a user to judge if everything is working or not.
 
 
 == Features
