--- a/README.asciidoc
+++ b/README.asciidoc
@@ -304,7 +304,8 @@ void Task::updateHook()
 
 
 === Architecture
-![Class diagram](https://github.com/arneboe/gui-vizkit3d_debug_drawings/raw/master/doc/class_diagram.png "Class Diagram")
+[link=https://github.com/arneboe/gui-vizkit3d_debug_drawings/raw/master/doc/class_diagram.png]
+image::https://github.com/arneboe/gui-vizkit3d_debug_drawings/raw/master/doc/class_diagram.png[Class Diagram]
 
 
 === Serialization
